k8s/banking-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-api
  template:
    metadata:
      labels:
        app: banking-api
    spec:
      containers:
        - name: banking-api
          image: banking-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: banking-api
spec:
  type: NodePort
  selector:
    app: banking-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
