k8s/banking-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: banking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-api
                port:
                  number: 8080
